--- a/package.json
+++ b/package.json
@@ -1,24 +1,38 @@
 {
-  "name": "yazilim",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "expo": "~43.0.2",
-    "expo-status-bar": "~1.1.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9"
-  },
-  "private": true
+	"name": "yazilim",
+	"version": "1.0.0",
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web",
+		"eject": "expo eject"
+	},
+	"dependencies": {
+		"@notifee/react-native": "^4.0.0",
+		"@react-native-community/datetimepicker": "^3.5.2",
+		"@react-navigation/bottom-tabs": "^6.0.9",
+		"@react-navigation/core": "^6.1.0",
+		"@react-navigation/native": "^6.0.6",
+		"@react-navigation/stack": "^6.0.11",
+		"expo": "~43.0.2",
+		"expo-notifications": "^0.13.3",
+		"expo-status-bar": "~1.1.0",
+		"firebase": "8.2.3",
+		"firebase-app": "^0.0.1",
+		"firebase-auth": "^0.1.2",
+		"react": "17.0.1",
+		"react-dom": "17.0.1",
+		"react-native": "0.64.3",
+		"react-native-elements": "^3.4.2",
+		"react-native-gesture-handler": "^1.10.3",
+		"react-native-paper": "^4.10.1",
+		"react-native-safe-area-context": "^3.3.2",
+		"react-native-web": "0.17.1"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.9"
+	},
+	"private": true
 }
