--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
 		"eject": "expo eject"
 	},
 	"dependencies": {
-		"@notifee/react-native": "^4.0.0",
 		"@react-native-community/datetimepicker": "^3.5.2",
 		"@react-navigation/bottom-tabs": "^6.0.9",
 		"@react-navigation/core": "^6.1.0",
@@ -18,6 +17,7 @@
 		"@react-navigation/stack": "^6.0.11",
 		"expo": "~43.0.2",
 		"expo-notifications": "^0.13.3",
+		"expo-permissions": "^13.1.0",
 		"expo-status-bar": "~1.1.0",
 		"firebase": "8.2.3",
 		"firebase-app": "^0.0.1",
